<resources>
    <string name="app_name">Do-It India</string>
    <string name="register">Register</string>
    <string name="signIn">Sign In</string>
    <string name="registerUser">Not a User? Sign Up</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>

    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
</resources>
